automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,8 +2,8 @@
   <% @products.each do |p| %>
 <li><%= p.name %> - $<%= p.price %><br>
   <%= truncate (p.description) %>
-  <button id="js-inventory" data-type='inventory' data-id="<%= p.id %>">Inventory</button>
-  <button class="js-more" data-description="<%= p.description %>"data-inventory="<%= p.inventory %>" data-id="<%= p.id %>">More Info</button>
+  <button id="js-more" data-id="<%= p.id %>">Inventory</button>
+  <button class="js-more" data-id="<%= p.id %>">More Info</button>
     <p id="inventory-<%= p.id %>"></p>
     <p id="moreInfo-<%= p.id %>"></p>
 </li>
@@ -17,8 +17,10 @@
   $(function () {
     $("#js-inventory").on('click',function() {
       var id = this.dataset.id;
-      $.get('/products/' + id + "/inventory", function(data) {
+      $.get('/products/' + id + "/description",function(description) {
+      $.get('/products/' + id + "/inventory", function(inventory) {
         $("#inventory-" + id).text(data);
+        })
       })
     })
   })
