automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -28,7 +28,7 @@
 </script>
 
 
-<script type="text/javascript" charset="utf-8">
+<!-- <script type="text/javascript" charset="utf-8">
 $(function() {
   $(".js-more").on('click', function() {
     var id= $(this).data('id')
@@ -44,6 +44,6 @@ $(function() {
     }
       $("#moreInfo-" + id).text(`${data} - ${description}`);
   })
-})
+}) -->
 
 </script>
