--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,9 +18,11 @@
     $("#js-inventory").on('click',function() {
       var id = this.dataset.id;
       $.get('/products/' + id + "/description",function(description) {
+        console.log(description)
+      })
         $.get('/products/' + id + "/inventory", function(inventory) {
         $("#inventory-" + id).text(description - inventory);
-        })
+
       })
     })
   })
