automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,7 +15,7 @@
 
 <script type="text/javascript" charset="utf-8">
   $(function () {
-    $(".js-morse").on('click',function() {
+    $(".js-more").on('click',function() {
       var id = this.dataset.id;
       $.get('/products/' + id + "/description",function(description) {
         console.log(description)
