--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,7 +20,7 @@
       $.get('/products/' + id + "/description",function(description) {
         console.log(description)
             $.get('/products/' + id + "/inventory", function(inventory) {
-          console.log(inventory)
+          // console.log(inventory)
         $("#inventory-" + id).text(description - inventory);
       })
       })
