automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,8 +20,8 @@
       $.get('/products/' + id + "/description",function(description) {
         console.log(description)
             $.get('/products/' + id + "/inventory", function(inventory) {
-          // console.log(inventory)
-        $("#inventory-" + id).text(description - inventory);
+
+        $("#inventory-" + id).text(`${description} - ${inventory}`);
       })
       })
     })
