automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
   <%= truncate (p.description) %>
   <button class="js-more" data-id="<%= p.id %>">Inventory</button>
   <button class="js-more" data-id="<%= p.id %>">More Info</button>
-    <p id="inventory-<%= p.id %>"></p>
+    <p id="moreInfo-<%= p.id %>"></p>
 </li>
   <% end %>
 </ul>
