--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,7 +18,12 @@
       var id = this.dataset.id;
       $.get('/products/' + id + "/description",function(description) {
         $.get('/products/' + id + "/inventory", function(inventory) {
-        $("#moreInfo-" + id).text(`${description} - ${inventory}`);
+          if (parseInt(inventory) == 0){
+            var data = 'Sold Out'
+          } else{
+            var data = 'Available'
+          }
+        $("#moreInfo-" + id).text(`${description} - ${data}`);
       })
       })
     })
