--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,7 +14,7 @@
 <script type="text/javascript" charset="utf-8">
   $(function () {
     $(".js-more").on('click',function() {
-      var id = this.dataset.id;
+      var id = $(this).data("id");
       $.get('/products/' + id + "/description",function(description) {
         $.get('/products/' + id + "/inventory", function(inventory) {
           if (inventory === false){
