automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -22,7 +22,7 @@
           } else{
             var data = 'Available'
           }
-        $("#moreInfo-" + id).text(`${description} - ${data}`);
+        $("#moreInfo-" + id).text(description + "-" + data);
       })
       })
     })
