--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,7 +17,7 @@
       var id = $(this).data("id");
       $.get('/products/' + id + "/description",function(description) {
         $.get('/products/' + id + "/inventory", function(inventory) {
-          if (inventory === false){
+          if (inventory === 'false'){
             var data = 'Sold Out'
           } else{
             var data = 'Available'
