--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<!-- <ul>
   <% @products.each do |p| %>
 <li><%= p.name %> - $<%= p.price %><br>
   <div id="product-<%= p.id %>"><%= truncate(p.description) %></div>
@@ -6,8 +6,13 @@
     <p id="moreInfo-<%= p.id %>"></p>
 </li>
   <% end %>
-</ul>
-
+</ul> -->
+<h1>Products</h1>
+<% @products.each do |product| %>
+  <h3><%= product.name %></h3>
+  <div id="product-<%= product.id %>"><%= truncate(product.description) %></div>
+  <button class="js-more" data-id="<%= product.id %>">More Info</button>
+<% end %>
 
 <script type="text/javascript" charset="utf-8">
 $(function() {
