automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,7 +9,7 @@
 </ul> -->
 
 
-<!-- <script type="text/javascript" charset="utf-8">
+<script type="text/javascript" charset="utf-8">
   $(function () {
     $(".js-more").on('click',function() {
       var id = $(this).data("id");
